--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width">
-		<title></title>
+		<title>MLB Attendance</title>
 
 		<!--put your external stylesheet links here-->
         <link rel="stylesheet" href="css/leaflet.css">
@@ -12,10 +12,13 @@
 		<!--[if IE<9]>
 			<link rel="stylesheet" href="css/style.ie.css">
 		<![endif]-->
-	</head>
+    </head>
 
 	<body>
 		<!--put your initial page content here-->
+        <div class = "header">
+        <h1> MLB Attendance Averages</h1>
+        <h3>2010-2016</h3></div>
         <div id="mapid"></div>
 
     
